# feup-mieic-cal-proj

./: .gitignore  README.md  dadosProjeto.xlsx  data.xlsx
report/: CAL_relatorio_2MIEIC05_G2_entrega1.tex
report/1st/: CAL_relatorio_2MIEIC05_G2_entrega1.tex
report/2nd/: CAL_relatorio_2MIEIC05_G2_entrega2.tex  CAL_relatorio_2MIEIC08_G2_entrega2.tex
source/: Application.cpp  Application.h  CMakeLists.txt  Graph.cpp  Graph.h  GraphFiles.cpp  GraphFiles.h  GraphLoader.h  MultiDepotVehicleRouting.cpp  MultiDepotVehicleRouting.h  PortoSecundaryScc.txt  main.cpp
source/ConectividadeForte/: Kosaraju.h  Tarjan.h
source/Tests/: dummy.cpp  sccTest.cpp  shortestPathTest.cpp
source/View/: View.cpp  View.h  dummy.cpp
source/agents/: ApplicationCenter.cpp  ApplicationCenter.h  StorageCenter.cpp  StorageCenter.h  Truck.cpp  Truck.h
source/algorithms/acessibility/: BreathFirstSearch.cpp  BreathFirstSearch.h  DepthFirstSearch.cpp  DepthFirstSearch.h
source/algorithms/shortest-path/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  FloydWarshall.cpp  FloydWarshall.h
source/algorithms/strongly-connected-components/: Kosaraju.cpp  Kosaraju.h  Tarjan.cpp  Tarjan.h
source/algorithms/travelling-salesman/: BellmanHelpKarp.cpp  BellmanHelpKarp.h  NearestNeighbor.cpp  NearestNeighbor.h
source/algorithms/vehicle-routing/: MultiSourceDijkstra.cpp  MultiSourceDijkstra.h
source/maps/: espinho_centers.txt  espinho_strong_centers.txt  penafiel_centers.txt  penafiel_strong_centers.txt  porto_centers.txt  porto_strong_centers.txt  scriptCentersGenerator.py
source/python/: espinho_centers.txt  penafiel_centers.txt  porto_strong_centers.txt  t.py  t2.py  tal.txt
